--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -34,5 +34,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            happyhappyjun/pintos:$SHA6
+            happyhappyjun/pintos:${{ echo ${GITHUB_SHA} | cut -c1-8 }}
             happyhappyjun/pintos::latest
