--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -32,5 +32,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            happyhappyjun/pintos:$(git rev-parse --short "$GITHUB_SHA")
+            happyhappyjun/pintos:${{ github.sha }}
             happyhappyjun/pintos::latest
