태그 syntax error 수정

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,4 +33,4 @@ jobs:
           push: true
           tags: |
             happyhappyjun/pintos:${{ github.sha }}
-            happyhappyjun/pintos::latest
+            happyhappyjun/pintos:latest
