--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,8 +2,8 @@ name: ci
 
 on:
   push:
-    branches:
-      - main  # Change this to your main branch name
+    paths:
+      - Dockerfile
 
 jobs:
   build-and-push:
