--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -16,10 +16,17 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Pull Docker Image
-      run: docker pull loeper/stanford-cs212-pintos:latest
+      run: docker pull
 
     - name: Run Pintos test
-      run: docker run --workdir /pintos/src/threads --entrypoint '/bin/bash' -v ${{ github.workspace }}/pintos:/pintos loeper/stanford-cs212-pintos:latest -c "make clean && make && make check"
+      uses: addnab/docker-run-action@v3
+      with:
+        image: loeper/stanford-cs212-pintos:latest
+        options: -v ${{ github.workspace }}/pintos:/pintos --workdir /pintos/src/threads
+        entrypoint: "/bin/bash"
+        run: |
+          make
+          make check
 
     - name: Get test results
       run: echo "RESULTS=$(cat ./pintos/src/threads/build/results)" >> $GITHUB_ENV
