--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -20,10 +20,7 @@ jobs:
 
     - name: Run Pintos test
       run: |
-        docker run --workdir /pintos/src/threads \
-          --entrypoint '/bin/bash' 
-          -v ${{ github.workspace }}/pintos:/pintos loeper/stanford-cs212-pintos:latest \
-          -c "ls && echo $PWD && make clean && make && make check"
+        docker run --workdir /pintos/src/threads --entrypoint '/bin/bash' -v ${{ github.workspace }}/pintos:/pintos loeper/stanford-cs212-pintos:latest -c "ls && echo $PWD && make clean && make && make check"
 
     - name: Get test results
       run: echo "RESULTS=$(cat ./pintos/src/threads/build/results)" >> $GITHUB_ENV
