multiline string 의 변수화 수정
https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#setting-an-environment-variable

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -28,7 +28,11 @@ jobs:
     - name: Get test results
       run: |
         docker cp  pintos:/pintos/src/threads/build/results $PWD
-        echo "RESULTS=$(cat $PWD/results)" >> $GITHUB_ENV
+        {
+          echo 'RESULTS<<EOF'
+          cat $PWD/results
+          echo EOF
+        } >> $GITHUB_ENV
 
     - name: Comment PR
       if: github.event_name == 'pull_request'
