--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -28,19 +28,27 @@ jobs:
     - name: Get test results
       run: |
         docker cp  pintos:/pintos/src/threads/build/results $PWD
-        {
-          echo 'RESULTS<<EOF'
-          cat $PWD/results
-          echo EOF
-        } >> $GITHUB_ENV
 
-    - name: Comment PR
-      if: github.event_name == 'pull_request'
-      uses: peter-evans/create-or-update-comment@v1
+    - name: Find Comment
+      uses: peter-evans/find-comment@v2
+      id: fc
       with:
         issue-number: ${{ github.event.pull_request.number }}
-        body: |
-          ```
-          ${{ env.RESULTS }}
-          ```
-        edit-mode: replace
+        comment-author: 'github-actions[bot]'
+        body-includes: This comment was written by a bot!
+
+    - name: Create comment
+      if: steps.fc.outputs.comment-id == ''
+      uses: peter-evans/create-or-update-comment@v3
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        body-path: 'results'
+        reactions: rocket
+
+    - name: Update comment
+      if: steps.fc.outputs.comment-id != ''
+      uses: peter-evans/create-or-update-comment@v3
+      with:
+        comment-id: ${{ steps.fc.outputs.comment-id }}
+        body-path: 'results'
+        reactions: hooray
