--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -28,6 +28,15 @@ jobs:
     - name: Get test results
       run: |
         docker cp  pintos:/pintos/src/threads/build/results $PWD
+        {
+          echo 'TEST_RESULT<<EOF'
+          echo "테스트 결과"
+          echo "```"
+          cat $PWD/results
+          echo "```"
+          echo EOF
+        } >> "$GITHUB_ENV"
+        
 
     - name: Find Comment
       uses: peter-evans/find-comment@v2
@@ -35,14 +44,14 @@ jobs:
       with:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
-        body-includes: This comment was written by a bot!
+        body-includes: "테스트 결과"
 
     - name: Create comment
       if: steps.fc.outputs.comment-id == ''
       uses: peter-evans/create-or-update-comment@v3
       with:
         issue-number: ${{ github.event.pull_request.number }}
-        body-path: 'results'
+        body: $TEST_RESULT
         reactions: rocket
 
     - name: Update comment
@@ -50,5 +59,5 @@ jobs:
       uses: peter-evans/create-or-update-comment@v3
       with:
         comment-id: ${{ steps.fc.outputs.comment-id }}
-        body-path: 'results'
+        body: $TEST_RESULT
         reactions: hooray
