--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -4,8 +4,12 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    types: [opened, synchronize]
+
+  pull_request_target:
+    branches: [ master ]
+    types:
+      - opened
+      - synchronize
 
 jobs:
   test:
