--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -6,7 +6,7 @@ on:
       - main
 
   pull_request_target:
-    branches: [ master ]
+    branches: main
     types:
       - opened
       - synchronize
