타입 오류 해결

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -6,7 +6,8 @@ on:
       - main
 
   pull_request_target:
-    branches: main
+    branches:
+      - main
     types:
       - opened
       - synchronize
