push 로 기준 변경

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,16 +1,7 @@
 name: Pintos CI
 
 on:
-  push:
-    branches:
-      - main
-
-  pull_request_target:
-    branches:
-      - main
-    types:
-      - opened
-      - synchronize
+  push
 
 jobs:
   test:
