--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -45,7 +45,7 @@ jobs:
       with:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
-        body-includes: "PASS"
+        body-includes: "pass"
 
     - name: Create comment
       if: steps.fc.outputs.comment-id == ''
