--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -45,15 +45,7 @@ jobs:
       with:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
-        body-includes: "pass"
-
-    - name: Create comment
-      if: steps.fc.outputs.comment-id == ''
-      uses: peter-evans/create-or-update-comment@v3
-      with:
-        issue-number: ${{ github.event.pull_request.number }}
-        body:
-        reactions: rocket
+        body-includes: "Test output"
 
     - name: Create or update comment
       uses: peter-evans/create-or-update-comment@v3
