--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -65,7 +65,7 @@ userprog_SRC += userprog/tss.c		# TSS management.
 userprog_SRC += userprog/user-memory-access.c # Accessing User Memory
 
 # No virtual memory code yet.
-#vm_SRC = vm/file.c			# Some file.
+vm_SRC = vm/frame.c			# Frame and Frame Table
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
