--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -65,7 +65,8 @@ userprog_SRC += userprog/tss.c		# TSS management.
 userprog_SRC += userprog/user-memory-access.c # Accessing User Memory
 
 # No virtual memory code yet.
-vm_SRC = vm/frame.c			# Frame and Frame Table
+vm_SRC  = vm/frame.c			# Frame and Frame Table
+vm_SRC += vm/spt.c			    # Supplemental Page Table
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
