--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -65,7 +65,10 @@ userprog_SRC += userprog/tss.c		# TSS management.
 userprog_SRC += userprog/user-memory-access.c # Accessing User Memory
 
 # No virtual memory code yet.
-#vm_SRC = vm/file.c			# Some file.
+vm_SRC  = vm/frame.c
+vm_SRC += vm/spt.c
+vm_SRC += vm/mmap.c
+vm_SRC += vm/swap.c
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
