--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -69,6 +69,7 @@ vm_SRC  = vm/frame.c
 vm_SRC += vm/spt.c
 vm_SRC += vm/mmap.c
 vm_SRC += vm/swap.c
+vm_SRC += vm/page.c
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
