--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -65,9 +65,11 @@ userprog_SRC += userprog/tss.c		# TSS management.
 userprog_SRC += userprog/user-memory-access.c # Accessing User Memory
 
 # No virtual memory code yet.
-vm_SRC  = vm/frame.c			# Frame and Frame Table
-vm_SRC += vm/spt.c			    # Supplemental Page Table
-vm_SRC += vm/swap.c			# Swap Table
+vm_SRC  = vm/frame.c
+vm_SRC += vm/spt.c
+vm_SRC += vm/mmap.c
+vm_SRC += vm/swap.c
+vm_SRC += vm/page.c
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
